--- a/configs/luca_model.yaml
+++ b/configs/luca_model.yaml
@@ -5,11 +5,6 @@
 model:
   type: "MusicTrOCR"
   params:
-    # Vision encoder backbone (HuggingFace model name)
-    # Options: microsoft/convnext-tiny-224 (~28M params)
-    #          microsoft/convnext-small-224 (~50M params)  
-    #          google/vit-base-patch16-224 (~86M params)
-    #          facebook/deit-base-patch16-224 (~86M params)
     vision_model_name: "facebook/convnext-tiny-224"
     
     # Transformer decoder parameters
@@ -24,20 +19,20 @@ model:
 data:
   dataset_path: "data/primus/package_aa"
   vocabulary_path: "data/semantic_labels.txt"
-  split_ratio: [0.6, 0.2, 0.2]  # train, val, test
+  split_ratio: [0.8, 0.15, 0.05]  # train, val, test
   num_workers: 4
   pin_memory: true
 
 # Training configuration
 training:
-  batch_size: 16
+  batch_size: 32
   epochs: 200
   
   # Optimizer settings
   optimizer:
     type: "Adam"
-    learning_rate: 1e-4
-    weight_decay: 1e-5
+    learning_rate: 0.0001
+    weight_decay: 0.00001
     betas: [0.9, 0.999]
   
   # Learning rate scheduler
@@ -46,10 +41,10 @@ training:
     mode: "min"
     factor: 0.5
     patience: 5
-    threshold: 1e-4
+    threshold: 0.0001
     threshold_mode: "rel"
     cooldown: 2
-    eps: 1e-8
+    eps: 0.00000001
   
   # Early stopping
   early_stop_patience: 15
@@ -58,7 +53,7 @@ training:
   grad_clip_norm: 1.0
   
   # Checkpointing
-  checkpoint_dir: "checkpoints/luca_model"
+  checkpoint_dir: "networks/checkpoints/luca_model"
 
 # Logging configuration
 logging:
