Implemented debug prints for loss computation

--- a/configs/luca_model.yaml
+++ b/configs/luca_model.yaml
@@ -69,6 +69,7 @@ training:
 # Logging configuration
 logging:
   use_wandb: true
+  verbose: false  # Enable detailed prediction vs ground truth debug output
   wandb:
     project: "music-recognition"
     run_name: "music-trocr-convnext-tiny"
