--- a/configs/luca_model.yaml
+++ b/configs/luca_model.yaml
@@ -12,7 +12,7 @@ model:
     n_heads: 8               # Number of attention heads
     n_decoder_layers: 6      # Number of decoder layers
     d_ff: 2048              # Feed-forward dimension
-    max_seq_len: 512        # Maximum sequence length
+    max_seq_len: 1512        # Maximum sequence length (increased to handle longer sequences)
     dropout: 0.1            # Dropout rate
 
 # Data configuration
@@ -41,8 +41,8 @@ data:
 
 # Training configuration
 training:
-  batch_size: 64
-  epochs: 20
+  batch_size: 32
+  epochs: 100
   
   # Optimizer settings
   optimizer:
@@ -74,7 +74,7 @@ training:
 # Logging configuration
 logging:
   use_wandb: true
-  verbose: true
+  verbose: false
   wandb:
     project: "music-recognition"
     run_name: "music-trocr-convnext-tiny"
